--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,15 +35,23 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   get: ^4.6.5
-  firebase_core: ^1.24.0
-  firebase_core_platform_interface: 4.5.1
-  firebase_auth: ^3.4.2
   fluttertoast: 8.1.1
   carousel_pro: ^1.0.0
   material_dialogs: ^1.1.1
   loading_animation_widget: ^1.2.0+4
   pinput: ^1.1.0
   dotted_border: ^2.1.0
+  video_player: ^2.6.1
+  chewie: ^1.5.0
+  http: ^0.13.5
+  image_picker: ^0.8.6
+  firebase_core: ^1.24.0
+  firebase_core_platform_interface: 4.5.1
+  url_launcher: ^6.1.8
+  qr_code_scanner: ^1.0.1
+  connectivity_plus: ^2.3.9
+
+
 
 dev_dependencies:
   flutter_test:
